[gd_scene load_steps=6 format=3 uid="uid://b2ubpqxw20a46"]

[ext_resource type="Script" uid="uid://vvc7io83fosg" path="res://GameFiles/Gameplay Scripts/Obstacles/Dragon.gd" id="1_rqyba"]
[ext_resource type="Texture2D" uid="uid://diwpcy4j8gsdq" path="res://GameFiles/SpinHead IMGS/Dragon/dragonHead.png" id="2_04sm2"]
[ext_resource type="Texture2D" uid="uid://dw2ga1v2b1a5s" path="res://GameFiles/SpinHead IMGS/Dragon/dragonPiece.png" id="3_bft0k"]

[sub_resource type="Curve" id="Curve_lpvda"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0509804, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bspqb"]
size = Vector2(1, 2700)

[node name="Dragon" type="StaticBody2D"]
script = ExtResource("1_rqyba")

[node name="DragonBody" type="Line2D" parent="."]
z_index = 3
z_as_relative = false
position = Vector2(0, 16)
points = PackedVector2Array(0, 0)
width = 36.0
width_curve = SubResource("Curve_lpvda")
texture = ExtResource("3_bft0k")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 2

[node name="DragonHead" type="Sprite2D" parent="."]
z_index = 3
z_as_relative = false
texture = ExtResource("2_04sm2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_bspqb")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
